<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eMainStateMachine" Id="{ae2f80c0-7219-4e14-b5e1-3d29d14ade86}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eMainStateMachine :
(
	STARTUP,
	READY,
	OPERATIONAL,
	SHUTDOWN,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>