<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MainControl" Id="{165fa4b6-fe79-4748-9022-b33b5b722466}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MainControl
VAR
	fbErrorHandling : FB_ErrorHandling;
	fbServiceModule : FB_ServiceModule;
	fbLevitationSystem : FB_LevitationSystem;
	fbGuidanceSystem : FB_GuidanceSystem;
	


	
	eMainState : eMainStateMachine := eMainStateMachine.STARTUP;
	fbErrorTimer : TON;										//10s
	stMode : stOperationMode;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
CASE eMainState OF
	
	eMainStateMachine.STARTUP:
	
		IF stMode.eMode = eOperationMode.RUN THEN
			doCheckSystem();
		ELSIF stMode.eMode = eOperationMode.TEST THEN
			stMode.nTestMode.0 := stMode.bTestServiceModule;
			stMode.nTestMode.1 := stMode.bTestLevitationSystem;
			stMode.nTestMode.2 := stMode.bTestGuidanceSystem;
			
			CASE stMode.nTestMode OF
				0:
					fbServiceModule.setSLEEP := TRUE;
					fbLevitationSystem.setSLEEP := TRUE;
					fbGuidanceSystem.setSLEEP := TRUE;
				1:
					fbServiceModule.setSLEEP := FALSE;
					fbLevitationSystem.setSLEEP := TRUE;
					fbGuidanceSystem.setSLEEP := TRUE;
				2:
					fbServiceModule.setSLEEP := TRUE;
					fbLevitationSystem.setSLEEP := FALSE;
					fbGuidanceSystem.setSLEEP := TRUE;
				3:
					fbServiceModule.setSLEEP := FALSE;
					fbLevitationSystem.setSLEEP := FALSE;
					fbGuidanceSystem.setSLEEP := TRUE;
				4:
					fbServiceModule.setSLEEP := TRUE;
					fbLevitationSystem.setSLEEP := TRUE;
					fbGuidanceSystem.setSLEEP := FALSE;
				5:
					fbServiceModule.setSLEEP := FALSE;
					fbLevitationSystem.setSLEEP := TRUE;
					fbGuidanceSystem.setSLEEP := FALSE;
				6:
					fbServiceModule.setSLEEP := TRUE;
					fbLevitationSystem.setSLEEP := FALSE;
					fbGuidanceSystem.setSLEEP := FALSE;
				7:
					fbServiceModule.setSLEEP := FALSE;
					fbLevitationSystem.setSLEEP := FALSE;
					fbGuidanceSystem.setSLEEP := FALSE;
			END_CASE
			
			doCheckSystem();
		END_IF
		
		
	eMainStateMachine.READY:
		iTest := 2;

	eMainStateMachine.OPERATIONAL:
		iTest := 3;

	eMainStatemachine.SHUTDOWN:
		iTest := 4;

	eMainStateMachine.ERROR:
		iTest := 5;	




END_CASE]]></ST>
    </Implementation>
    <Method Name="doCheckSystem" Id="{55b5a3ff-6d8a-4578-a9a0-1bbfe6d7f606}">
      <Declaration><![CDATA[METHOD doCheckSystem
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbErrorHandling();
fbServiceModule();
fbLevitationSystem();
fbGuidanceSystem();
		
IF (fbServiceModule.eCondition = eConditionCheck.READY OR fbServiceModule.eCondition = eConditionCheck.SLEEP) AND (fbLevitationSystem.eCondition = eConditionCheck.READY OR fbLevitationSystem.eCondition = eConditionCheck.SLEEP) AND (fbGuidanceSystem.eCondition = eConditionCheck.READY OR fbGuidanceSystem.eCondition = eConditionCheck.SLEEP) THEN
	eMainState := eMainStateMachine.READY;
ELSIF fbServiceModule.eCondition = eConditionCheck.ERROR OR fbLevitationSystem.eCondition = eConditionCheck.ERROR OR fbGuidanceSystem.eCondition = eConditionCheck.ERROR THEN
	fbErrorTimer(IN := TRUE, PT := T#10S);
	IF fbErrorTimer.Q THEN
		fbErrorTimer.IN := FALSE;
		eMainState := eMainStateMachine.ERROR;
	END_IF
ELSE
	fbErrorTimer.IN := FALSE;
	eMainState := eMainStateMachine.STARTUP;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MainControl">
      <LineId Id="42" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="97" Count="4" />
      <LineId Id="103" Count="3" />
      <LineId Id="108" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="112" Count="1" />
      <LineId Id="111" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="115" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="119" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="124" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="128" Count="1" />
      <LineId Id="127" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="72" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="25" Count="2" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="16" Count="2" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doCheckSystem">
      <LineId Id="6" Count="15" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>